<resources>
    <string name="app_name">Sqlitedatabase</string>
    <string name="text_name">Name</string>
    <string name="text_surname">Surname</string>
    <string name="text_marks">Marks</string>
    <string name="btn_add">Add Data</string>
    <string name="btn_adding">add data</string>
    <string name="btn_viewall">ViewAll</string>
    <string name="update_id">id</string>
    <string name="update_data">update</string>
    <string name="delete_data">delete data</string>
    <string name="update_phone">Phone</string>
</resources>
